[package]
name = "pulso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.9" }
clap = { version = "4.3.0", features = ["derive"] }
pcap = { version = "1.1.0", features = ["capture-stream"] }
tokio = { version = "1.0", features = ["net", "rt", "macros", "rt-multi-thread"] }
futures = { version = "0.3" }