[package]
name = "pulso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "4.3.0", features = ["derive"] }
pcap = { version = "1.1.0", features = ["capture-stream"] }
libc = "0.2"
etherparse = "0.13"
tokio = { version = "1.0", features = ["net", "rt", "macros", "rt-multi-thread"] }
futures = "0.3"
timeout-readwrite = "0.3"
