[package]
name = "pulso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "4.3.0", features = ["derive"] }
pcap = { version = "1.1.0", features = ["capture-stream"] }
libc = "0.2"
etherparse = "0.13"
tokio = { version = "1.0", features = ["net", "rt", "macros", "rt-multi-thread", "time"] }
futures = "0.3"
anyhow = { version = "1.0", features = ["backtrace"] }
color-print = "0.3"
hmac = "0.12"
blake2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }

[dev-dependencies]
timeout-readwrite = "0.3"
ctor = "0.2"
